{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 90,
  "lineage": "f1394824-e772-fd93-2fbd-b48b90bc3ba3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip-extra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-077ff60428497afa6",
            "domain": "vpc",
            "id": "eipalloc-01e20d77d2426d4c4",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0c440aa0918d5dcd3",
            "private_dns": "ip-11-0-11-172.eu-west-1.compute.internal",
            "private_ip": "11.0.11.172",
            "public_dns": "ec2-54-217-203-168.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.217.203.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT Gateway EIP Extra"
            },
            "tags_all": {
              "Name": "NAT Gateway EIP Extra"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw-extra",
            "aws_vpc.main-vpc-extra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AmazonLinuxExtra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f33eb035fa54c454",
            "arn": "arn:aws:ec2:eu-west-1:370970544153:instance/i-0a610a4810d8a12f1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a610a4810d8a12f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "exadel.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-014287d25eb5c7b4b"
              }
            ],
            "primary_network_interface_id": "eni-014287d25eb5c7b4b",
            "private_dns": "ip-11-0-11-100.eu-west-1.compute.internal",
            "private_ip": "11.0.11.100",
            "public_ip": "3.249.236.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-067a2000f946a588e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a80c649a6cc2472",
            "tags": {
              "Name": "Amazon Linux Extra"
            },
            "tags_all": {
              "Name": "Amazon Linux Extra"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e1e57c83edd10b6d"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_network_interface.my_network",
            "aws_security_group.amazonlinuxextrasg",
            "aws_subnet.public-extra",
            "aws_vpc.main-vpc-extra",
            "data.aws_ami.ami_amazonlinux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "UbuntuExtra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f92d7f46963b5365",
            "arn": "arn:aws:ec2:eu-west-1:370970544153:instance/i-05f1771e2b8a27b42",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f1771e2b8a27b42",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "exadel.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-035202d24ff723669"
              }
            ],
            "primary_network_interface_id": "eni-035202d24ff723669",
            "private_dns": "ip-11-0-12-110.eu-west-1.compute.internal",
            "private_ip": "11.0.12.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-055520b5b2c3a1b61",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03322cfe67c73f3ab",
            "tags": {
              "Name": "Ubuntu Extra"
            },
            "tags_all": {
              "Name": "Ubuntu Extra"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-009b679c130b9d39a"
            ]
          },
          "dependencies": [
            "aws_network_interface.my_network2",
            "aws_security_group.ubuntuextrasg",
            "aws_subnet.private-extra",
            "aws_vpc.main-vpc-extra",
            "data.aws_ami.ami_ubuntu",
            "aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-extra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370970544153:internet-gateway/igw-0f4fa3255a27c1411",
            "id": "igw-0f4fa3255a27c1411",
            "owner_id": "370970544153",
            "tags": {
              "Name": "Extra IGW"
            },
            "tags_all": {
              "Name": "Extra IGW"
            },
            "vpc_id": "vpc-04d0fb6cba15d3bb8"
          },
          "dependencies": [
            "aws_vpc.main-vpc-extra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-extra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e20d77d2426d4c4",
            "connectivity_type": "public",
            "id": "nat-0495342fd10867671",
            "network_interface_id": "eni-0c440aa0918d5dcd3",
            "private_ip": "11.0.11.172",
            "public_ip": "54.217.203.168",
            "subnet_id": "subnet-08a80c649a6cc2472",
            "tags": {
              "Name": "Main NAT Gateway Extra"
            },
            "tags_all": {
              "Name": "Main NAT Gateway Extra"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip-extra",
            "aws_internet_gateway.igw-extra",
            "aws_subnet.public-extra",
            "aws_vpc.main-vpc-extra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "my_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-02a5338b3a83dde52",
                "device_index": 0,
                "instance": "i-0a610a4810d8a12f1"
              }
            ],
            "id": "eni-014287d25eb5c7b4b",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:43:56:e0:fb:17",
            "private_ip": "11.0.11.100",
            "private_ips": [
              "11.0.11.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0e1e57c83edd10b6d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a80c649a6cc2472",
            "tags": {
              "Name": "amazonlinux_network_interface"
            },
            "tags_all": {
              "Name": "amazonlinux_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.amazonlinuxextrasg",
            "aws_subnet.public-extra",
            "aws_vpc.main-vpc-extra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "my_network2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0a0cb6ad84bff4b67",
                "device_index": 0,
                "instance": "i-05f1771e2b8a27b42"
              }
            ],
            "id": "eni-035202d24ff723669",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:c4:d7:c0:8b:57",
            "private_ip": "11.0.12.110",
            "private_ips": [
              "11.0.12.110"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-009b679c130b9d39a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03322cfe67c73f3ab",
            "tags": {
              "Name": "ubuntu_network_interface"
            },
            "tags_all": {
              "Name": "ubuntu_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.ubuntuextrasg",
            "aws_subnet.private-extra",
            "aws_vpc.main-vpc-extra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-extra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370970544153:route-table/rtb-085efe01458a1af16",
            "id": "rtb-085efe01458a1af16",
            "owner_id": "370970544153",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0495342fd10867671",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table Extra"
            },
            "tags_all": {
              "Name": "Private Route Table Extra"
            },
            "vpc_id": "vpc-04d0fb6cba15d3bb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat-extra",
            "aws_vpc.main-vpc-extra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-extra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370970544153:route-table/rtb-0bcb861d52115f7cd",
            "id": "rtb-0bcb861d52115f7cd",
            "owner_id": "370970544153",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f4fa3255a27c1411",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table Extra"
            },
            "tags_all": {
              "Name": "Public Route Table Extra"
            },
            "vpc_id": "vpc-04d0fb6cba15d3bb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-extra",
            "aws_vpc.main-vpc-extra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0161137cd232a4bf3",
            "route_table_id": "rtb-085efe01458a1af16",
            "subnet_id": "subnet-03322cfe67c73f3ab"
          },
          "dependencies": [
            "aws_subnet.public-extra",
            "aws_vpc.main-vpc-extra",
            "aws_eip.nat_eip-extra",
            "aws_internet_gateway.igw-extra",
            "aws_nat_gateway.nat-extra",
            "aws_route_table.private-extra",
            "aws_subnet.private-extra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-extra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029619f7dff9cd244",
            "route_table_id": "rtb-0bcb861d52115f7cd",
            "subnet_id": "subnet-08a80c649a6cc2472"
          },
          "dependencies": [
            "aws_subnet.public-extra",
            "aws_vpc.main-vpc-extra",
            "aws_internet_gateway.igw-extra",
            "aws_route_table.public-extra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "amazonlinuxextrasg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370970544153:security-group/sg-0e1e57c83edd10b6d",
            "description": "SG for nginx",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1e57c83edd10b6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Amazon Linux Extra SG",
            "name_prefix": "",
            "owner_id": "370970544153",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Extra SG AMAZON LINUX"
            },
            "tags_all": {
              "Name": "Extra SG AMAZON LINUX"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d0fb6cba15d3bb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc-extra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ubuntuextrasg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370970544153:security-group/sg-009b679c130b9d39a",
            "description": "SG for ubuntu",
            "egress": [
              {
                "cidr_blocks": [
                  "11.0.11.100/32"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "11.0.11.100/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "11.0.11.100/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "11.0.11.100/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-009b679c130b9d39a",
            "ingress": [
              {
                "cidr_blocks": [
                  "11.0.11.100/32"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "11.0.11.100/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "11.0.11.100/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "11.0.11.100/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Ubuntu SG",
            "name_prefix": "",
            "owner_id": "370970544153",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Extra SG UBUNTU"
            },
            "tags_all": {
              "Name": "Extra SG UBUNTU"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d0fb6cba15d3bb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc-extra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-extra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370970544153:subnet/subnet-03322cfe67c73f3ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "11.0.12.0/24",
            "id": "subnet-03322cfe67c73f3ab",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "370970544153",
            "tags": {
              "Name": "Private Subnet Extra"
            },
            "tags_all": {
              "Name": "Private Subnet Extra"
            },
            "vpc_id": "vpc-04d0fb6cba15d3bb8"
          },
          "dependencies": [
            "aws_vpc.main-vpc-extra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-extra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370970544153:subnet/subnet-08a80c649a6cc2472",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "11.0.11.0/24",
            "id": "subnet-08a80c649a6cc2472",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "370970544153",
            "tags": {
              "Name": "Public Subnet Extra"
            },
            "tags_all": {
              "Name": "Public Subnet Extra"
            },
            "vpc_id": "vpc-04d0fb6cba15d3bb8"
          },
          "dependencies": [
            "aws_vpc.main-vpc-extra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main-vpc-extra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370970544153:vpc/vpc-04d0fb6cba15d3bb8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0cde4ad5c9d63e062",
            "default_route_table_id": "rtb-01f8b894a5e26002f",
            "default_security_group_id": "sg-0512f28fe5cb5cb12",
            "dhcp_options_id": "dopt-cd9089ab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04d0fb6cba15d3bb8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01f8b894a5e26002f",
            "owner_id": "370970544153",
            "tags": {
              "Name": "Main VPC"
            },
            "tags_all": {
              "Name": "Main VPC"
            }
          }
        }
      ]
    }
  ]
}